# vcard-cleanup

./: README.md  pyproject.toml  ruff.toml  vcard_cleaner.py
